--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,21 @@
   display: grid;
   grid-template-columns: minmax(150px, 30%) 1fr minmax(150px, 30%);
 }
+
+@layer components{
+  
+  .external-link{
+  @apply text-pink-400 underline transition italic
+  }
+}
+
+
+.modal{
+  min-width: 65ch;
+  max-width: 65ch;
+}
+
+.modal::backdrop{
+  background: #94a3b8;
+  opacity: 0.3;
+}
